# vtable-rs

./: Cargo.toml  vtable.code-workspace
core/: Cargo.toml
core/src/: builder.rs  folds.rs  handler.rs  lib.rs  macros.rs  path.rs  primitives.rs  symbol.rs  traits.rs
derive/: Cargo.toml
derive/src/: interface.rs  lib.rs
examples/symbols/: Cargo.toml
examples/symbols/src/: main.rs
